[package]
name = "computer_enhance_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
env_logger = "0.11.5"
serde = { version = "1.0",  features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
thiserror = "2.0.1"
log = "0.4.22"
tempfile = "3.14.0"
similar = "2.6.0"
function_name = "0.3.0"
bitfield-struct = "0.9.2"
anyhow = "1.0.93"
once_cell = "1.20.2"
winapi = { version = "0.3.9", features = ["profileapi"]}
treeline = "0.1.0"
num-format = "0.4.4"
prettytable-rs = "0.10.0"
